Resolves: tdf#117057 use same style warning as elsewhere

Change-Id: I3072c7725d0769c0a4a1974664b1546ca3ee35ad